// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserReducer should handle all defined error types: rejected types DELETE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "DELETE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types GET_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types PLATFORM_USER_AUTH 1`] = `
{
  "result": {
    "auth": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "errors": {},
    "locale": {},
    "optin": {},
  },
  "type": "PLATFORM_USER_AUTH_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types UPDATE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "UPDATE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types USER_LOCALE 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "optin": {},
  },
  "type": "USER_LOCALE_REJECTED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types DELETE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "DELETE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types GET_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types PLATFORM_USER_AUTH 1`] = `
{
  "result": {
    "auth": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "errors": {},
    "locale": {},
    "optin": {},
  },
  "type": "PLATFORM_USER_AUTH_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types UPDATE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "UPDATE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_LOCALE 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {
      "data": {
        "permissions": [],
        "test": "success",
        "user": {
          "identity": {
            "user": {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "optin": {},
  },
  "type": "USER_LOCALE_FULFILLED",
}
`;

exports[`UserReducer should handle all defined pending types: pending types DELETE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "DELETE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types GET_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "GET_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types PLATFORM_USER_AUTH 1`] = `
{
  "result": {
    "auth": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "errors": {},
    "locale": {},
    "optin": {},
  },
  "type": "PLATFORM_USER_AUTH_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types UPDATE_USER_OPTIN 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "UPDATE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types USER_LOCALE 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "optin": {},
  },
  "type": "USER_LOCALE_PENDING",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 400 1`] = `
{
  "result": {
    "auth": {},
    "errors": {},
    "locale": {},
    "optin": {},
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 401 1`] = `
{
  "result": {
    "auth": {},
    "errors": {
      "data": [
        "SUBSCRIPTIONS1004",
      ],
      "error": true,
      "errorMessage": "Request failed with status code 401",
      "status": 401,
    },
    "locale": {},
    "optin": {},
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 403 1`] = `
{
  "result": {
    "auth": {},
    "errors": {
      "data": [
        "SUBSCRIPTIONS1004",
      ],
      "error": true,
      "errorMessage": "Request failed with status code 403",
      "status": 403,
    },
    "locale": {},
    "optin": {},
  },
  "type": "4XX",
}
`;
